Footer updated for mobile view

--- a/index.html
+++ b/index.html
@@ -614,7 +614,6 @@
           <ul class="footer-nav">
             <li><a href="#features">About us</a></li>
             <li><a href="#features">Blog</a></li>
-            <li><a href="#">Press</a></li>
             <li><a href="#works">iOS App</a></li>
             <li><a href="#works">Android App</a></li>
           </ul>
@@ -637,7 +636,7 @@
         </div>
       </div>
       <div class="row">
-        <p>Copyright &copy; 2021 by Foodzone. All rights reserved.</p>
+        <p>Copyright &copy; 2021 by Foodzone. All rights reserved.<br> Developed By Ajay Kharat.</p>
       </div>
     </footer>
 
